--- a/stylesheet_template.css
+++ b/stylesheet_template.css
@@ -251,10 +251,7 @@ p {
 }
 
 .recipe{
-  display: grid;
-  grid-template-columns: auto auto auto;
-  text-align: center;
-  align-items: center;
+  display: flex;
   box-shadow: 0 7px 10px rgba(0,0,0,0.25);
   padding: 5px;
   margin-top: 5px;
